    "Unspecified error" if querying the following endpoints fails:
      'GET /slurm/v0.0.40/diag/'
      'GET /slurm/v0.0.41/diag/'
      'GET /slurm/v0.0.42/diag/'
      'GET /slurm/v0.0.40/licenses/'
      'GET /slurm/v0.0.41/licenses/'
      'GET /slurm/v0.0.42/licenses/'
      'GET /slurm/v0.0.40/reconfigure'
      'GET /slurm/v0.0.41/reconfigure'
      'GET /slurm/v0.0.42/reconfigure'

* Changes in Slurm 24.05.3
==========================
 -- data_parser/v0.0.40 - Added field descriptions
 -- slurmrestd - Avoid creating new slurmdbd connection per request to
    '* /slurm/slurmctld/*/*' endpoints.
 -- Fix compilation issue with switch/hpe_slingshot plugin.
 -- Fix gres per task allocation with threads-per-core.
 -- data_parser/v0.0.41 - Added field descriptions

* Changes in Slurm 24.05.2
==========================
 -- Fix energy gathering rpc counter underflow in _rpc_acct_gather_energy when
    more than 10 threads try to get energy at the same time. This prevented
    the possibility to get energy from slurmd by any step until slurmd was
    restarted, so losing energy accounting metrics in the node.
 -- accounting_storage/mysql - Fix issue where new user with wckey did not
    have a default wckey sent to the slurmctld.
 -- slurmrestd - Prevent slurmrestd segfault when handling the following
    endpoints when none of the optional parameters are specified:
      'DELETE /slurm/v0.0.40/jobs'
      'DELETE /slurm/v0.0.41/jobs'
      'GET /slurm/v0.0.40/shares'
      'GET /slurm/v0.0.41/shares'
      'GET /slurmdb/v0.0.40/instance'
      'GET /slurmdb/v0.0.41/instance'
      'GET /slurmdb/v0.0.40/instances'
      'GET /slurmdb/v0.0.41/instances'
      'POST /slurm/v0.0.40/job/{job_id}'
      'POST /slurm/v0.0.41/job/{job_id}'
 -- Fix IPMI energy gathering when no IPMIPowerSensors are specified in
    acct_gather.conf. This situation resulted in an accounted energy of 0
    for job steps.